--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+    implementation "androidx.dynamicanimation:dynamicanimation-ktx:1.0.0-alpha03"
+    implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:4.1.2'
 
 }
